--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,22 +12,23 @@
 <div class="container my-2" align="center">
 
     <h3>Employee List</h3>
-    <a th:href="@{/addnew}" class="btn btn-primary btn-sm mb-3" >Add Employee</a>
+    <a th:href="@{/addnew}" class="btn btn-primary btn-sm mb-3">Add Employee</a>
     <table style="width:80%" border="1"
-           class = "table table-striped table-responsive-md">
+           class="table table-striped table-responsive-md">
         <thead>
         <tr>
             <th>Name</th>
+            <th>Age</th>
             <th>Email</th>
-            <th>Action</th>
         </tr>
         </thead>
         <tbody>
         <tr th:each="employee:${allemplist}">
             <td th:text="${employee.name}"></td>
+            <td th:text="${employee.age}"></td>
             <td th:text="${employee.email}"></td>
-            <td> <a th:href="@{/showFormForUpdate/{id}(id=${employee.id})}"
-                    class="btn btn-primary">Update</a>
+            <td><a th:href="@{/showFormForUpdate/{id}(id=${employee.id})}"
+                   class="btn btn-primary">Update</a>
                 <a th:href="@{/deleteEmployee/{id}(id=${employee.id})}"
                    class="btn btn-danger">Delete</a>
             </td>
