--- a/src/main/resources/templates/newemployee.html
+++ b/src/main/resources/templates/newemployee.html
@@ -17,17 +17,28 @@
     <form action="#" th:action="@{/save}" th:object="${employee}"
           method="POST">
         <input type="text" th:field="*{name}" placeholder="Employee Name"
-               class="form-control mb-4 col-4"> <input type="text"
-                                                       th:field="*{email}" placeholder="Employee Email"
-                                                       class="form-control mb-4 col-4">
+               class="form-control mb-4 col-4">
+        <div style="color: red" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">error</div>
+        <br/>
 
-        <button type="submit" class="btn btn-info col-2">Save
-            Employee</button>
+        <input type="text" th:field="*{age}" placeholder="Employee Name"
+               class="form-control mb-4 col-4">
+        <div style="color: red" th:if="${#fields.hasErrors('age')}" th:errors="*{age}">error</div>
+        <br/>
+
+        <input type="text"
+               th:field="*{email}" placeholder="Employee Email"
+               class="form-control mb-4 col-4">
+        <div style="color: red"  th:if="${#fields.hasErrors('email')}" th:errors="*{email}">error</div>
+        <br/>
+
+        <button type="submit" class="btn btn-info col-2">Save Employee</button>
     </form>
 
     <hr>
-
-    <a th:href="@{/}"> Back to Employee List</a>
+    <form th:action="@{/}" >
+        <input type="submit" value="Back to Employee List" class="btn btn-info col-2"/>
+    </form>
 </div>
 </body>
 </html>
