--- a/src/main/resources/templates/update.html
+++ b/src/main/resources/templates/update.html
@@ -17,18 +17,27 @@
           method="POST">
 
         <!-- Add hidden form field to handle update -->
-        <input type="hidden" th:field="*{id}" />
+        <input type="hidden" th:field="*{id}"/>
 
-        <input type="text" th:field="*{Name}" class="form-control mb-4 col-4">
+        <input type="text" th:field="*{name}" class="form-control mb-4 col-4">
+        <div style="color: red" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">error</div>
+        <br/>
+
+        <input type="text" th:field="*{age}" class="form-control mb-4 col-4">
+        <div style="color: red" th:if="${#fields.hasErrors('age')}" th:errors="*{age}">error</div>
+        <br/>
 
         <input type="text" th:field="*{email}" class="form-control mb-4 col-4">
+        <div style="color: red"  th:if="${#fields.hasErrors('email')}" th:errors="*{email}">error</div>
+        <br/>
 
         <button type="submit" class="btn btn-info col-2"> Update Employee</button>
     </form>
 
     <hr>
-
-    <a th:href = "@{/}"> Back to Employee List</a>
+    <form th:action="@{/}"  >
+        <input type="submit" value="Back to Employee List" class="btn btn-info col-2"/>
+    </form>
 </div>
 </body>
 </html>
