--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,7 +12,8 @@
 <div class="container my-2" align="center">
 
     <h3>Employee List</h3>
-    <a th:href="@{/addnew}" class="btn btn-primary btn-sm mb-3">Add Employee</a>
+    <a th:href="@{/addNew}" class="btn btn-primary btn-sm mb-3">Add Employee</a>
+
     <table style="width:80%" border="1"
            class="table table-striped table-responsive-md">
         <thead>
@@ -23,7 +24,7 @@
         </tr>
         </thead>
         <tbody>
-        <tr th:each="employee:${allemplist}">
+        <tr th:each="employee, number : ${allEmpList}">
             <td th:text="${employee.name}"></td>
             <td th:text="${employee.age}"></td>
             <td th:text="${employee.email}"></td>
@@ -35,6 +36,14 @@
         </tr>
         </tbody>
     </table>
+    <div class="btn-group" role="group" aria-label="Basic example">
+        <button th:each="pageNumber : ${page_numbers}" type="button" class="btn btn-secondary">
+            <a th:href="@{/(page=${pageNumber}, limit=10)}"
+               th:text="${pageNumber}"
+               th:classappend="${pageNumber == current_page ? 'btn btn-secondary':''}">
+            </a>
+        </button>
+    </div>
 </div>
 </body>
 </html>
