--- a/src/main/resources/templates/newEmployee.html
+++ b/src/main/resources/templates/newEmployee.html
@@ -18,18 +18,18 @@
           method="POST">
         <input type="text" th:field="*{name}" placeholder="Employee Name"
                class="form-control mb-4 col-4">
-        <div style="color: red" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">error</div>
+        <div th:if="${#fields.hasErrors('name')}" th:errors="*{name}"  class="alert alert-danger" role="alert">error</div>
         <br/>
 
         <input type="text" th:field="*{age}" placeholder="Employee Name"
                class="form-control mb-4 col-4">
-        <div style="color: red" th:if="${#fields.hasErrors('age')}" th:errors="*{age}">error</div>
+        <div th:if="${#fields.hasErrors('age')}" th:errors="*{age}"  class="alert alert-danger" role="alert">error</div>
         <br/>
 
         <input type="text"
                th:field="*{email}" placeholder="Employee Email"
                class="form-control mb-4 col-4">
-        <div style="color: red"  th:if="${#fields.hasErrors('email')}" th:errors="*{email}">error</div>
+        <div th:if="${#fields.hasErrors('email')}" th:errors="*{email}"  class="alert alert-danger" role="alert">error</div>
         <br/>
 
         <button type="submit" class="btn btn-info col-2">Save Employee</button>
